# OMEGAups

./: CMakeLists.txt  gitMacros.txt
Velocidad9/: OfiTec.cpp  PEFMAT.cpp  abuelitaHelado.cpp  examCard2.cpp  karelMetro.cpp  recursion-ovi.cpp  roger.cpp  saltando.cpp  ultimoD.cpp
algoritmos voraces/: elProblemadelamochila.cpp  elProblemadelamochila.h  queFacilesDarCambio.cpp  queFacilesDarCambio.h
divisibilidad/: Divisibilidad11.cpp  divbisibilidadBasica.cpp  factoresPrimos.cpp
estructura de datos/: filaBancaria.cpp  formatosEnCafeteria.cpp  listaReservacion.cpp  maximoElePila.cpp  operandoConLista.cpp
extras/: ABC.cpp  ULAM ordenado.cpp  acomodarZapatillas.cpp  areaTrapecio.cpp  cajero.cpp  contarLetras.cpp  dibujarTache.cpp  diferenteCero.cpp  dolaresPesos.cpp  encuentraMayor.cpp  enterosPar.cpp  febrero.cpp  freddyyelCr.cpp  hablandoRobots.cpp  huyendoSerpiente.cpp  interpreteLenguajeProgramacion.cpp  intervireQ.cpp  ladoCorto.cpp  masMenos.cpp  modaGCF.cpp  ordenandoNumeros.cpp  parImpar.cpp  pociones.cpp  postresDF.cpp  secuenciasLoco.cpp  supermercado.cpp  triangulo.cpp  triangulos.cpp  try.cpp  watermelon.cpp
extras/.cph/: .areaTrapecio.cpp_481e1571572a68dcad5d10ce251b404c.prob  .freddyyelCr.cpp_b242f6a7ca317ed3c0c8716e3967bc83.prob  .interpreteLenguajeProgramacion.cpp_077d2663759e149650686eb1973c84ed.prob
ordenamiento/: laFamiliadeBuddy.cpp  ordenamientoInverso.cpp  ordenamientoPorCantidad.cpp  wenaOrdenada.cpp
recursion/: boletoCamion.cpp  evaluandoUnaFuncion.cpp  evaluandoUnaFuncionAlgoRara.cpp  recursionConMemorizacion.cpp
velocidad10/: anfibias.cpp  batallaEspacial.cpp  construyendoTrian.cpp  contandoaeiou.cpp  trianguloLoco.cpp
velocidad10/.cph/: .trianguloLoco.cpp_3f200a948da2b1dc4ad5b75ef1b6d561.prob
